--- a/src/Admin/adminpage.form
+++ b/src/Admin/adminpage.form
@@ -477,12 +477,11 @@
                 <Component class="javax.swing.JTable" name="jTable2">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="10" rowCount="4">
+                      <Table columnCount="9" rowCount="4">
                         <Column editable="true" title="NO" type="java.lang.Object"/>
                         <Column editable="true" title="ID" type="java.lang.Object"/>
-                        <Column editable="true" title="KODE PROMO" type="java.lang.Object"/>
-                        <Column editable="true" title="NAMA PROMO" type="java.lang.Object"/>
-                        <Column editable="true" title="GAMBAR" type="java.lang.Object"/>
+                        <Column editable="true" title="KODE " type="java.lang.Object"/>
+                        <Column editable="true" title="NAMA " type="java.lang.Object"/>
                         <Column editable="true" title="KATEGORI" type="java.lang.Object"/>
                         <Column editable="true" title="SUPPLIER" type="java.lang.Object"/>
                         <Column editable="true" title="HARGA JUAL" type="java.lang.Object"/>
